// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createOneToOneBatched iterates through getter records 1`] = `
[
  {
    "declaration A": 1,
    "declaration B": 2,
    "declaration C": 3,
  },
  {
    "declaration A": 3,
    "declaration B": 4,
    "declaration C": 7,
  },
  {
    "declaration A": 5,
    "declaration B": 6,
    "declaration C": 11,
  },
  {
    "declaration A": 7,
    "declaration B": 8,
    "declaration C": 15,
  },
  {
    "declaration A": 9,
    "declaration B": 10,
    "declaration C": 19,
  },
  {
    "declaration A": 11,
    "declaration B": 12,
    "declaration C": 23,
  },
  {
    "declaration A": 13,
    "declaration B": 14,
    "declaration C": 27,
  },
  {
    "declaration A": 15,
    "declaration B": 16,
    "declaration C": 31,
  },
  {
    "declaration A": 17,
    "declaration B": 18,
    "declaration C": 35,
  },
  {
    "declaration A": 19,
    "declaration B": 20,
    "declaration C": 39,
  },
]
`;

exports[`createOneToOneBatched iterates through getter records 2`] = `
[
  3,
  3,
  3,
  1,
]
`;

exports[`createOneToOneBatched permutates records with another node 1`] = `
[
  {
    "declaration A": 1,
    "declaration B": 2,
    "declaration C": 3,
    "declaration D": 10,
  },
  {
    "declaration A": 3,
    "declaration B": 4,
    "declaration C": 7,
    "declaration D": 10,
  },
  {
    "declaration A": 5,
    "declaration B": 6,
    "declaration C": 11,
    "declaration D": 10,
  },
  {
    "declaration A": 7,
    "declaration B": 8,
    "declaration C": 15,
    "declaration D": 10,
  },
  {
    "declaration A": 9,
    "declaration B": 10,
    "declaration C": 19,
    "declaration D": 10,
  },
  {
    "declaration A": 11,
    "declaration B": 12,
    "declaration C": 23,
    "declaration D": 10,
  },
  {
    "declaration A": 13,
    "declaration B": 14,
    "declaration C": 27,
    "declaration D": 10,
  },
  {
    "declaration A": 15,
    "declaration B": 16,
    "declaration C": 31,
    "declaration D": 10,
  },
  {
    "declaration A": 17,
    "declaration B": 18,
    "declaration C": 35,
    "declaration D": 10,
  },
  {
    "declaration A": 19,
    "declaration B": 20,
    "declaration C": 39,
    "declaration D": 10,
  },
  {
    "declaration A": 1,
    "declaration B": 2,
    "declaration C": 3,
    "declaration D": 20,
  },
  {
    "declaration A": 3,
    "declaration B": 4,
    "declaration C": 7,
    "declaration D": 20,
  },
  {
    "declaration A": 5,
    "declaration B": 6,
    "declaration C": 11,
    "declaration D": 20,
  },
  {
    "declaration A": 7,
    "declaration B": 8,
    "declaration C": 15,
    "declaration D": 20,
  },
  {
    "declaration A": 9,
    "declaration B": 10,
    "declaration C": 19,
    "declaration D": 20,
  },
  {
    "declaration A": 11,
    "declaration B": 12,
    "declaration C": 23,
    "declaration D": 20,
  },
  {
    "declaration A": 13,
    "declaration B": 14,
    "declaration C": 27,
    "declaration D": 20,
  },
  {
    "declaration A": 15,
    "declaration B": 16,
    "declaration C": 31,
    "declaration D": 20,
  },
  {
    "declaration A": 17,
    "declaration B": 18,
    "declaration C": 35,
    "declaration D": 20,
  },
  {
    "declaration A": 19,
    "declaration B": 20,
    "declaration C": 39,
    "declaration D": 20,
  },
]
`;

exports[`createOneToOneBatched permutates records with another node 2`] = `
[
  3,
  3,
  3,
  1,
]
`;
